--- a/hugo.toml
+++ b/hugo.toml
@@ -1,10 +1,10 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "/"
+baseURL = "piotte13.github.io/fj2tech/"
 # Title of your website (required).
-title = "Hugoplate"
+title = "FJ2Tech"
 # Your theme name
-# theme = "hugoplate"
+theme = "hugoplate"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 timeZone = "America/New_York"
 # post pagination
