New fancy front page

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -2,49 +2,42 @@
 
 # main menu
 [[main]]
-name = "Home"
+name = "FJ2 Tech Inc"
 url = "/"
 weight = 1
 
 [[main]]
-name = "About"
-url = "about/"
 weight = 2
-
-[[main]]
-name = "Elements"
-url = "elements/"
-weight = 3
-
-[[main]]
-weight = 4
-name = "Pages"
+name = "Services"
 hasChildren = true
 
 [[main]]
-parent = "Pages"
+parent = "Services"
+name = "Machine Learning"
+url = "blog/"
+weight = 1
+
+[[main]]
+parent = "Services"
+name = "Application Development"
+url = "authors/"
+weight = 2
+
+[[main]]
+parent = "Services"
+name = "Project Management"
+url = "contact/"
+weight = 3
+
+[[main]]
+name = "About"
+url = "about/"
+weight = 3
+
+[[main]]
 name = "Blog"
 url = "blog/"
-
-[[main]]
-parent = "Pages"
-name = "Contact"
-url = "contact/"
-
-[[main]]
-parent = "Pages"
-name = "Authors"
-url = "authors/"
-
-[[main]]
-parent = "Pages"
-name = "Categories"
-url = "categories/"
-
-[[main]]
-parent = "Pages"
-name = "404 Page"
-url = "404/"
+weight = 4
 
 
 # footer menu
@@ -54,7 +47,7 @@ url = "about/"
 weight = 1
 
 [[footer]]
-name = "Elements"
+name = "Blog"
 url = "elements/"
 weight = 2
 
