--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://piotte13.github.io/fj2tech/"
+baseURL = "https://fj2tech.com/"
 # Title of your website (required).
 title = "FJ2Tech"
 # Your theme name
