--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -32,25 +32,7 @@ weight = 3
 [[main]]
 weight = 3
 name = "The Team"
-hasChildren = true
-
-[[main]]
-parent = "The Team"
-name = "Jérémie"
-url = "team/Jérémie/"
-weight = 1
-
-[[main]]
-parent = "The Team"
-name = "Frederick"
-url = "team/Frederick/"
-weight = 2
-
-[[main]]
-parent = "The Team"
-name = "Julien"
-url = "team/Julien/"
-weight = 3
+url = "team/"
 
 [[main]]
 name = "About"
